iac_class/02-instance/sg.tf
# Create Security Group - SSH Traffic
resource "aws_security_group" "shalabs-in-sg-ssh" {
  name        = "shalabs-in-sg-ssh"
  description = "Dev VPC SSH"
  ingress {
    description = "Allow Port 22"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${chomp(data.http.shalabs-home.response_body)}/32"]
  }
  egress {
    description = "Allow all IP and Ports outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge({ "Name" = "shalabs-in-sg-ssh" }, { "type" = "securitygroup" }, var.tags)
}

# Create Security Group - Web Traffic
resource "aws_security_group" "shalabs-in-sg-http" {
  name        = "shalabs-in-sg-http"
  description = "Dev VPC Web"

  ingress {
    description = "Allow Port 80"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


  ingress {
    description = "Allow Port 443"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all IP and Ports outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge({ "Name" = "shalabs-in-sg-http" }, { "type" = "securitygroup" }, var.tags)
}
